TSVPORTAL-231, TSVPORTAL-10934: fixed menu title height to auto resize

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -64,7 +64,7 @@
       padding: 0.4rem 0;
       text-align: center;
       font-size: 120%;
-      height: 4rem;
+      height: auto;
       line-height: 3rem;
     }
   }
