--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -91,7 +91,19 @@
 					</div>
 
 				</div>
-
+				
+				<p>Miles/Points</p>
+    			<div class="input-group" ng-class="{ 'has-error' : !itemPrice.priceMilesPoints.miles_points && displayError && $parent.shouldValidatePrice() , 'has-success' : itemPrice.priceMilesPoints.miles_points && $parent.shouldValidatePrice() }">
+                <input name="Miles Points" 
+                       ng-model="itemPrice.priceMilesPoints.miles_points" 
+                       ng-required="false" 
+                       ng-disabled="!itemPrice.startDate && !itemPrice.endDate || $parent.isDisabled()"   
+                       maxlength="10" 
+                       custom-validity 
+                       custom-pattern="number" 
+                       class="form-control" 
+                       placeholder="0"/>
+      			</div>
 			</div>
 
 		</div>
