--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -42,7 +42,8 @@
               <div class="form-group">
                 <label>Country</label>
 								<select class="form-control" ng-model="search.countryId">
-									<option value="{{country.id}}" ng-repeat="country in countryList track by country.id ">{{ country.countryName }}</option>
+                  <option value="">Select a country</option>
+									<option value="{{country.id}}" ng-repeat="country in countryList | orderBy:'countryName' track by country.id">{{ country.countryName }}</option>
 								</select>
               </div>
             </div>
@@ -65,10 +66,10 @@
 						<div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
                 <label>Station Code</label>
-								<ui-select ng-disabled="search.stationName" multiple ng-model="search.stationId" theme="bootstrap">
+								<ui-select multiple ng-model="search.stationId" theme="bootstrap" >
 	                <ui-select-match placeholder="Start typing to find a Station">{{ $item.code }}
 	                </ui-select-match>
-	                <ui-select-choices repeat="station in globalStationList | filter: $select.search | orderBy:'code'">
+	                <ui-select-choices repeat="station in globalStationList | filter: $select.search | filter: filterByCountry | filter: filterByCity | orderBy:'code'">
 	                  <div ng-bind-html="station.code | highlight: $select.search"></div>
 	                </ui-select-choices>
 	              </ui-select>
@@ -78,7 +79,7 @@
 						<div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
                 <label>Station Name</label>
-								<ui-select ng-disabled="search.stationId" multiple ng-model="search.stationName" theme="bootstrap">
+								<ui-select multiple ng-model="search.stationId" theme="bootstrap">
 	                <ui-select-match placeholder="Start typing to find a Station">{{ $item.name }}
 	                </ui-select-match>
 	                <ui-select-choices repeat="station in globalStationList | filter: $select.search | orderBy:'name'">
