TSVPORTAL-10859 - Working on station list filter

--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -90,12 +90,12 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <date-picker-field name="EffectiveFrom" label="Effective From"
+              <date-picker-field name="EffectiveFrom" label="Effective From" custom-effective="true"
                 ng-model="search.startDate"></date-picker-field>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <date-picker-field  name="EffectiveTo" label="Effective To"
+              <date-picker-field name="EffectiveTo" label="Effective To" custom-effective="true"
                 ng-model="search.endDate"></date-picker-field>
             </div>
 
