TSVPORTAL-10859 - Implemented filter and pagination

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -185,4 +185,4 @@
 <form-success-modal list-path="menu-relationship-list" create-path="menu-relationship-create"></form-success-modal>
 <form-update-modal list-path="menu-relationship-list"></form-update-modal>
 <leave-view-modal></leave-view-modal>
-<dynamic-left-nav title="Menu-Catering Station Relationship"></dynamic-left-nav>
+<dynamic-left-nav title="Company Stations"></dynamic-left-nav>
