--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -164,88 +164,96 @@
   </error-dialog>
 
 	<form name="stationListForm" ng-show="stationList.length">
+    <div class="table-responsive">
+      <table infinite-scroll="getStationList()" class="table table-bordered table-responsive table-hover">
 
-	  <table class="table table-bordered table-responsive table-hover">
+        <thead>
 
-	    <thead>
+          <tr>
+            <th ng-if="false">
+              <input type="checkbox" ng-model="allStationsSelected" />
+            </th>
+            <th>Station Code</th>
+            <th>Station Name</th>
+            <th>Catering Station</th>
+            <th>Country</th>
+            <th>City</th>
+            <th>Timezone</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Actions</th>
+          </tr>
 
-	      <tr>
-					<th ng-if="false">
-						<input type="checkbox" ng-model="allStationsSelected" />
-					</th>
-					<th>Station Code</th>
-	        <th>Station Name</th>
-					<th>Catering Station</th>
-					<th>Country</th>
-					<th>City</th>
-					<th>Timezone</th>
-	        <th>Start Date</th>
-	        <th>End Date</th>
-	        <th>Actions</th>
-	      </tr>
+        </thead>
 
-	    </thead>
+        <tbody>
 
-	    <tbody>
+          <tr ng-repeat="station in stationList">
 
-	      <tr ng-repeat="station in stationList">
+            <td ng-if="false">
+              <input type="checkbox" ng-model="selectedStations[station.id]" />
+            </td>
 
-					<td ng-if="false">
-						<input type="checkbox" ng-model="selectedStations[station.id]" />
-					</td>
+            <td>{{ station.stationCode }}</td>
 
-					<td>{{ station.stationCode }}</td>
+            <td>{{ station.stationName }}</td>
 
-	        <td>{{ station.stationName }}</td>
+            <td>
+              <span ng-show="station.isCaterer">Yes</span>
+              <span ng-show="!station.isCaterer">No</span>
+            </td>
 
-					<td>
-						<span ng-show="station.isCaterer">Yes</span>
-						<span ng-show="!station.isCaterer">No</span>
-					</td>
+            <td>{{ station.countryName }}</td>
 
-					<td>{{ station.countryName }}</td>
+            <td>{{ station.cityName }}</td>
 
-					<td>{{ station.cityName }}</td>
+            <td>UTC {{station.utcDstOffset}}</td>
 
-					<td>UTC {{station.utcDstOffset}}</td>
+            <td width="200px">
+              <date-picker-field ng-if="false" form="stationListForm" name="Start Date {{$index+1}}" required="true"
+                ng-model="formData.stations[$index].startDate"
+                disable="isDateActive(station.startDate)">
+              </date-picker-field>
+              {{ station.startDate }}
+            </td>
 
-	        <td width="200px">
-						<date-picker-field ng-if="false" form="stationListForm" name="Start Date {{$index+1}}" required="true"
-							ng-model="formData.stations[$index].startDate"
-							disable="isDateActive(station.startDate)">
-						</date-picker-field>
-            {{ station.startDate }}
-					</td>
+            <td width="200px">
+              <date-picker-field ng-if="false" form="stationListForm"  name="End Date {{$index+1}}" required="true"
+                  ng-model="formData.stations[$index].endDate"
+                  disable="isDateActive(station.endDate)">
+              </date-picker-field>
+              {{ station.endDate }}
+            </td>
 
-	        <td width="200px">
-						<date-picker-field ng-if="false" form="stationListForm"  name="End Date {{$index+1}}" required="true"
-								ng-model="formData.stations[$index].endDate"
-								disable="isDateActive(station.endDate)">
-						</date-picker-field>
-            {{ station.endDate }}
-					</td>
+            <td>
 
-	        <td>
+              <a class="btn btn-info btn-xs" ng-href="#/station-view/{{station.id}}" ng-show="isDateActive(station.endDate)">
+                <i class="fa fa-file"></i>
+              </a>
+              <a class="btn btn-primary btn-xs" ng-href="#/station-edit/{{station.id}}" ng-hide="isDateActive(station.endDate)">
+                <i class="fa fa-pencil"></i>
+              </a>
 
-						<a class="btn btn-info btn-xs" ng-href="#/station-view/{{station.id}}" ng-show="isDateActive(station.endDate)">
-	            <i class="fa fa-file"></i>
-	          </a>
-	          <a class="btn btn-primary btn-xs" ng-href="#/station-edit/{{station.id}}" ng-hide="isDateActive(station.endDate)">
-	            <i class="fa fa-pencil"></i>
-	          </a>
+            </td>
 
-	        </td>
+          </tr>
 
-	      </tr>
+        </tbody>
 
-	    </tbody>
-
-	  </table>
+      </table>
+    </div>
 
 	</form>
-
+  <alert ng-show="!loadingBarVisible && stationList.length == 0 && isSearch" type="info">
+    <span class="fa fa-flag"></span> Your search returned no results.
+  </alert>
+  <alert ng-hide="isSearch" type="info">
+    <span class="fa fa-flag"></span> Click search to show the results.
+  </alert>
+  <p ng-if="stationList.length > 0" class="record-count small text-center">Showing {{stationList.length}} records</p>
+  <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
 </div>
 
-<dynamic-left-nav></dynamic-left-nav>
+<dynamic-left-nav title="Company Stations"></dynamic-left-nav>
 
 <delete-record-dialog></delete-record-dialog>
