--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -4,25 +4,26 @@
 
 		<div class="row item-list-row">
 
-			<div class="col-xs-8">
+			<div class="col-xs-4">
 
 				<h2 class="view-name">Company Stations</h2>
 				<p>Here you will find a list of Stations. You are able to search and update Stations
 
 			</div>
 
-      <div class="col-xs-4 text-right">
+      <div class="col-xs-8 text-right">
+
+        <button class="btn btn-default" data-toggle="collapse" data-target="#filter-controls">
+          <span class="fa fa-filter" aria-hidden="true"></span>
+          <span class="hidden-xs">Toggle Filter</span>
+        </button>
 
 				<a href="#/station-create" class="btn btn-primary">
 					<i class="fa fa-plus"></i>
 					<span class="hidden-xs hidden-sm">Add Station</span>
 				</a>
 
-				<button class="btn btn-default" data-toggle="collapse" data-target="#filter-controls">
-          <span class="fa fa-filter" aria-hidden="true"></span>
-					<span class="hidden-xs">Toggle Filter</span>
-				</button>
-
+        <excel-upload type="stations"></excel-upload>
       </div>
 
 		</div>
