--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -4,14 +4,14 @@
 
 		<div class="row item-list-row">
 
-			<div class="col-xs-4">
+			<div class="col-xs-6">
 
 				<h2 class="view-name">Company Stations</h2>
 				<p>Here you will find a list of Stations. You are able to search and update Stations
 
 			</div>
 
-      <div class="col-xs-8 text-right">
+      <div class="col-xs-6 text-right">
 
         <button class="btn btn-default" data-toggle="collapse" data-target="#filter-controls">
           <span class="fa fa-filter" aria-hidden="true"></span>
@@ -106,20 +106,31 @@
 
 				<div class="panel-footer text-right">
 
-						<button class="btn btn-default btn-search-clear"
-							ng-click="clearSearchFilters()"
-							ng-show="showClearButton()">
-							<span class="btn-label">Clear</span>
-						</button>
+          <button class="btn btn-default btn-search-clear"
+            ng-click="clearSearchFilters()"
+            ng-show="showClearButton()">
+            <span class="btn-label">Clear</span>
+          </button>
 
-						<button ng-click="searchRecords()" class="btn btn-primary btn-search">
-							<span class="fa fa-search" aria-hidden="true"></span>
-							<span class="hidden-sm hidden-xs btn-label">Search</span>
-						</button>
+          <button ng-click="searchRecords()" class="btn btn-primary btn-search">
+            <span class="fa fa-search" aria-hidden="true"></span>
+            <span class="hidden-sm hidden-xs btn-label">Search</span>
+          </button>
 
-					</div>
+          <div class="dropdown pull-right" style="margin-left:3px;">
+            <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Export As
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+              <li><a href="{{ exportTo('xls') }}">Microsoft Excel (XLS)</a></li>
+              <li><a href="{{ exportTo('csv') }}">Comma Separated Values (CSV)</a></li>
+            </ul>
+          </div>
 
-				</form>
+        </div>
+
+      </form>
 
 			</div>
 
