TSVPORTAL-6928 - Fixed additional columns

--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -289,8 +289,12 @@
            custom-date="taxRate.endDate"
            ng-model="taxRate.endDate"></date-picker-field>
         </td>
-        <td>{{ getUpdatedOn(taxRate) }}</td>
-        <td>{{ getUpdateBy(taxRate) }}</td>
+        <td ng-switch-when="read">{{ getUpdatedOn(taxRate) }}</td>
+        <td ng-switch-when="edit" style="padding-top:15px;">{{ getUpdatedOn(taxRate) }}</td>
+        <td ng-switch-when="create">{{ getUpdatedOn(taxRate) }}</td>
+        <td ng-switch-when="read">{{ getUpdateBy(taxRate) }}</td>
+        <td ng-switch-when="edit" style="padding-top:15px;">{{ getUpdateBy(taxRate) }}</td>
+        <td ng-switch-when="create">{{ getUpdateBy(taxRate) }}</td>
         <!-- Buttons for Read -->
         <td class="animate-switch col-xs-1" ng-switch-when="read">
           <a class="btn btn-primary btn-xs" ng-show="isTaxRateEditable(taxRate)" ng-click="editCompanyTaxRate(taxRate)">
