--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -248,6 +248,10 @@
                 <i class="fa fa-pencil"></i>
               </a>
 
+              <button class="btn btn-danger btn-xs" ng-click="deleteRecordDialog(station.id)" ng-hide="isDateActive(station.startDate) || isDateActive(station.endDate)">
+                <i class="fa fa-trash"></i>
+              </button>
+
             </td>
 
           </tr>
