TSVPORTAL-231: forgotten to apply updated name

--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -12,7 +12,7 @@
 
       <div ng-show="moduleConfiguration" class="">
 
-        <modules ng-if="moduleOptions" module-list='moduleOptions' model="moduleOptionValues" are-inputs-disabled="!isUserAvailableForEditAndCreate()" ></modules>
+        <epos-config-modules ng-if="moduleOptions" module-list='moduleOptions' model="moduleOptionValues" are-inputs-disabled="!isUserAvailableForEditAndCreate()" ></epos-config-modules>
       </div>
     </div>
     <div class="modal-footer" ng-show="selectedProductVersion && selectedModule">
