--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -118,14 +118,14 @@
 
         <fieldset ng-disabled="isViewOnly()">
 
-          <button ng-show="formData.isCaterer" class="btn btn-primary btn-sm text-right" ng-click="addRelationship()">
+          <button ng-show="false" class="btn btn-primary btn-sm text-right" ng-click="addRelationship()">
             <span class="fa fa-plus" aria-hidden="true"></span>
             <span class="hidden-xs btn-label">Add Relationship</span>
           </button>
 
           <select class="form-control" name="isCaterer" ng-model="formData.isCaterer">
-             <option ng-selected="formData.isCaterer" value="true">Yes</value>
-             <option value="">No</value>
+             <option ng-selected="formData.isCaterer" value="true">Yes</option>
+             <option value="">No</option>
           </select>
 
            This is <span ng-show="!formData.isCaterer">not</span> a Catering Station
@@ -134,7 +134,7 @@
 
       </div>
 
-      <div class="panel-body" ng-show="formData.isCaterer">
+      <div class="panel-body" ng-show="false">
 
         <div ng-show="formData.companyStationRelationships.length === 0">
 
