TSVPORTAL-10901: start date allowed current date on create

--- a/app/views/schedule.html
+++ b/app/views/schedule.html
@@ -40,6 +40,7 @@
                                    name="EffectiveFrom"
                                    label="Effective From"
                                    disable-past="true"
+                                   end-current-effective="true"
                                    required="true"
                                    ng-model="schedule.startDate">
                 </date-picker-field>
