TSVPORTAL-10859 - Fix permissions

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -195,7 +195,7 @@
 
 </div>
 
-<form-success-modal list-path="menu-relationship-list" create-path="menu-relationship-create"></form-success-modal>
-<form-update-modal list-path="menu-relationship-list"></form-update-modal>
+<form-success-modal></form-success-modal>
+<form-update-modal></form-update-modal>
 <leave-view-modal></leave-view-modal>
 <dynamic-left-nav title="Company Stations"></dynamic-left-nav>
