--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -362,6 +362,8 @@
                   </div>
                 </div>
               </div>
+              <label>Miles/Points</label>
+              <input class="form-control" ng-model="promotion.milesPoints" name="milesPoints" ng-pattern="regexp.number" ng-required="false" maxlength="10" ng-disabled="readOnly || isDisabled"/>
           </fieldset>
         </fieldset>
 
