--- a/app/views/manual-ECS.html
+++ b/app/views/manual-ECS.html
@@ -184,7 +184,7 @@
 
       <div class="row">
         <div class="col-xs-6">
-          <table class="table table-hover table-responsive" ng-show="storeInstances.length">
+          <table infinite-scroll="loadPortalInstances()" class="table table-hover table-responsive ng-scope" ng-show="storeInstances.length">
             <thead>
             <tr>
               <th>Store Number</th>
@@ -394,7 +394,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <table class="table table-bordered table-hover table-responsive" ng-show="allECSInstances.length">
+        <table infinite-scroll="loadAllECSInstances()" class="table table-bordered table-hover table-responsive" ng-show="allECSInstances.length">
           <thead>
           <tr>
             <th>Portal Store Number</th>
