--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -89,6 +89,7 @@
       <th>Promotion Name</th>
       <th>Qualifier Type</th>
       <th>Benefit Type</th>
+      <th>Updated Date/Time</th>
       <th>Effective From</th>
       <th>Effective To</th>
       <th>Actions</th>
