--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -102,6 +102,7 @@
       <td>{{ promotion.promotionName }}</td>
       <td>{{ promotion.promotionTypeName }}</td>
       <td>{{ promotion.benefitTypeName }}</td>
+      <td>{{ getUpdatedOn(promotion) }}</td>
       <td>{{ promotion.startDate }}</td>
       <td>{{ promotion.endDate }}</td>
       <td>
