--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -90,6 +90,7 @@
       <th>Qualifier Type</th>
       <th>Benefit Type</th>
       <th>Updated Date/Time</th>
+      <th>Updated User</th>      
       <th>Effective From</th>
       <th>Effective To</th>
       <th>Actions</th>
@@ -103,6 +104,7 @@
       <td>{{ promotion.promotionTypeName }}</td>
       <td>{{ promotion.benefitTypeName }}</td>
       <td>{{ getUpdatedOn(promotion) }}</td>
+      <td>{{ getUpdateBy(promotion) }}</td>      
       <td>{{ promotion.startDate }}</td>
       <td>{{ promotion.endDate }}</td>
       <td>
