TSVPORTAL-6932: added get updateBy and updateOn columns on exciseDuty screen

--- a/app/views/excise-duty-list.html
+++ b/app/views/excise-duty-list.html
@@ -191,6 +191,8 @@
           <th>Duty Rate ({{ baseCurrency }})</th>
           <th class="col-xs-2">Start Date</th>
           <th class="col-xs-2">End Date</th>
+          <th>Updated Date/Time</th>
+          <th>Updated User</th>
           <th ng-show="isCRUD">Actions</th>
         </tr>
         </thead>
@@ -279,6 +281,8 @@
               ng-show="isSelectedToEdit(exciseDuty)">
             </date-picker-field>
           </td>
+          <td>{{ getUpdatedOn(exciseDuty) }}</td>
+          <td>{{ getUpdateBy(exciseDuty) }}</td>
           <td ng-show="isCRUD">
             <button type="submit"
                     class="btn btn-success btn-xs"
