--- a/app/views/promotion-catalog-list.html
+++ b/app/views/promotion-catalog-list.html
@@ -62,6 +62,7 @@
           <th>Effective From</th>
           <th>Effective To</th>
           <th>Included Promotions</th>
+          <th>Updated Date/Time</th>          
           <th>Conjunctions</th>
           <th>Actions</th>
         </tr>
@@ -72,6 +73,7 @@
           <td>{{ catalog.startDate }}</td>
           <td>{{ catalog.endDate }}</td>
           <td>{{ catalog.promotionCount }}</td>
+          <td>{{ getUpdatedOn(catalog) }}</td>
           <td>
             <button type="button" class="btn btn-xs btn-default" ng-show="catalog.conjunctionFlag" ng-click="redirectRecordToAction('edit', catalog.id, true)">
             <span class="fa fa-check"></span>
