--- a/app/views/menu-assignment.html
+++ b/app/views/menu-assignment.html
@@ -92,6 +92,17 @@
           </div>
           <div class="col-xs-12 col-sm-2"></div>
         </div>
+        <div class="row">
+          <div class="form-group col-sm-2">
+            <label>Updated User</label><br />
+            {{ getUpdateBy(menuAssignment) }}
+          </div>
+
+          <div class="form-group col-sm-2">
+            <label>Updated Date/Time</label><br />
+            {{ getUpdatedOn(menuAssignment) }}
+          </div>
+        </div>
       </div>
     </div>
 
