--- a/app/views/menu-relationship-create.html
+++ b/app/views/menu-relationship-create.html
@@ -86,19 +86,31 @@
 
             <div class="col-xs-12 col-sm-6">
               <fieldset ng-disabled="viewOnly || isRelationshipInactive()">
-                <date-picker-field form="form" 
-                  label="Effective To" 
-                  name="EffectiveTo" 
+                <date-picker-field form="form"
+                  label="Effective To"
+                  name="EffectiveTo"
                   ng-model="formData.endDate"
-                  min-date="minDate" 
+                  min-date="minDate"
                   custom-effective="true"
                   custom-date="formData.endDate"
-                  required="true" 
+                  required="true"
                   end-current-effective="editingRelationship">
                 </date-picker-field>
               </fieldset>
             </div>
 
+          </div>
+
+          <div class="row">
+            <div class="form-group col-sm-6">
+              <label>Updated User</label><br />
+              {{ getUpdateBy(formData) }}
+            </div>
+
+            <div class="form-group col-sm-6" ng-hide="isCreate()">
+              <label>Updated Date/Time</label><br />
+              {{ getUpdatedOn(formData) }}
+            </div>
           </div>
 
         </div>
