TSVPORTAL-6932: updated variable names on excise duty

--- a/app/views/excise-duty-relationship-list.html
+++ b/app/views/excise-duty-relationship-list.html
@@ -295,8 +295,8 @@
               ng-show="isSelectedToEdit(relationship)">
             </date-picker-field>
           </td>
-          <td>{{ getUpdatedOn(exciseDuty) }}</td>
-          <td>{{ getUpdateBy(exciseDuty) }}</td>
+          <td>{{ getUpdatedOn(relationship) }}</td>
+          <td>{{ getUpdateBy(relationship) }}</td>
           <td ng-show="isCRUD">
             <button type="submit"
                     class="btn btn-success btn-xs"
