TSVPORTAL-10859 - Fix delete error

--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -249,7 +249,7 @@
                 <i class="fa fa-save"></i>
               </a>
 
-              <button class="btn btn-danger btn-xs" ng-click="deleteRecordDialog(9999999)" ng-hide="isDateActive(station.startDate) || isDateActive(station.endDate)">
+              <button class="btn btn-danger btn-xs" ng-click="deleteRecordDialog(station.id)" ng-hide="isDateActive(station.startDate) || isDateActive(station.endDate)">
                 <i class="fa fa-trash"></i>
               </button>
 
