--- a/app/views/discount-list.html
+++ b/app/views/discount-list.html
@@ -74,6 +74,7 @@
             <th>Effective From</th>
             <th>Effective To</th>
             <th>Updated Date/Time</th>
+            <th>Updated User</th>             
             <th ng-show="isCRUD">Actions</th>
         </tr>
         </thead>
